# MokioFactory

./: .dockerignore  .gitignore  README.md  main.py  metadata.json  plan_concise.md  pyproject.toml
0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt  transcript.jsonl
configs/: README.md
configs/audit/: stage1_phase1_silver_audit.yaml
configs/cleaning/: stage1_phase1_sft_cleaning.yaml
configs/datasets/: glint_fable_5_traces_sample.yaml  nvidia_opencodeinstruct_sample.yaml  openthoughts_agent_v1_sft_sample.yaml  salesforce_apigen_mt_5k_sample.yaml  salesforce_xlam_function_calling_60k_sample.yaml  xlam_function_calling_60k_sample.yaml
configs/eval/: stage1_agent_code_holdout.yaml
configs/export/: stage1_llamafactory_sharegpt.yaml
configs/mixtures/: stage1_agent_code_v1.yaml
deploy/: README.md
deploy/LLaMAFactory/: README.md  run_full.sh  run_smoke.sh
deploy/MinIO/: README.md  docker-compose.yml
deploy/PostgreSQL/: README.md  docker-compose.yml
deploy/docker/: clean.Dockerfile
deploy/kind/: README.md  clean-sft-job.yaml  kind-config.yaml
docs/: README.md
models/: README.md
notebooks/: README.md
operators/: README.md
pipelines/: README.md  __init__.py
pipelines/audit/: README.md  __init__.py  audit_silver.py
pipelines/clean/: README.md  normalize_sft.py
pipelines/common/: __init__.py  storage.py
pipelines/eval/: README.md  build_holdout.py  generate_vllm.py  score_tool_calls.py
reports/: README.md
schemas/: README.md  sft.schema.json
scripts/: README.md
tests/: test_export_llamafactory.py
(+29 files in other folders)
