[project]
name = "mokiofactory"
version = "0.1.0"
description = "面向个人开发者的 Qwen3 小参数模型训练流水线：用工业组件跑通数据治理、SFT/LoRA、评测与闭环。"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.42",
    "datasets>=4.4.1",
    "jsonschema>=4.25.1",
    "pg8000>=1.31.5",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
